# Crawler

./: .gitignore  .gitmodules  CMakeLists.txt
BrowserRenderer/: CMakeLists.txt
BrowserRenderer/include/: CDPconn.h  WebSocketConn.h
BrowserRenderer/src/: CDPconn.cpp  ChromeProcess.cpp  HTTPclient.cpp  WebSocketConn.cpp  main.cpp
config/: blockeddomains.txt  blockedextensions.txt
docs/: ProjectFlowchart.md
docs/buildlogs/: 06-07-S2.md  07-07-S2.md  10-07-S1.md  17-07-S1.md  17-07-S2.md  18-07-S1.md  18-07-S2.md  20-07-S1.md  20-07-S2.md  9-07-S3.md
docs/dailyjournal/: 17-07-26.md  18-07-26.md  20-07-26.md
docs/designproposal/: v1CrawlerDesign.md  v2CrawlerDesign(incomplete).md  v3CrawlerDesign.md
include/browser/: CDPconn.h  ChromeProcess.h  HTTPclient.h  browserrenderer.h
include/crawler/: Crawler.h  Frontier.h  URLDepth.h
include/filter/: LinkFilter.h  QuickFilter.h
include/indexer/: TextExtractor.h  Tokenizer.h
include/network/: HTTPFetcher.h  Page.h  PageFetcher.h
include/parser/: HTMLParser.h  NormalizedURL.h
include/storage/: MySQLStorage.h
src/browser/: CDPconn.cpp  ChromeProcess.cpp  HTTPclient.cpp  WebSocketConn.cpp  browserrenderer.cpp
src/crawler/: Crawler.cpp  Frontier.cpp
src/filter/: LinkFilter.cpp  QuickFilter.cpp
src/indexer/: Indexer.cpp  IndexerStorage.cpp  StopwordFilter.cpp  TextExtractor.cpp  Tokenizer.cpp  main.cpp
src/network/: HTTPFetcher.cpp  PageFetcher.cpp
src/parser/: HTMLParser.cpp  URLParser.cpp
tests/: test_frontier.cpp
tests/htmlparser/: realtest.cpp  test.cpp
tests/indexer/: test_stopwordfilter.cpp  test_textextractor.cpp  test_tokenizer.cpp
tests/linkfilter/: test.cpp
tests/network/: httptest.cpp  pagetest.cpp
tests/normalizer/: test_normalize.cpp  test_relativeresolve.cpp
tests/patternmatcher/: test_basic.cpp  test_completekmp.cpp
tests/quickfilter/: test.cpp
tests/seenstore/: test.cpp
tests/urlparser/: test_invalid.cpp
